# facebook2telegram

./: .gitignore  README.md  config.py  facebook2telegram.py  fbparser.py  main.py  models.py  pyproject.toml  requirements.txt  van.py
source/: facebook2telegram.py
